[package]
name = "multex"
authors = ["Axel <dev@absalon.is>"]
description = "Run multiple commands concurrently"
repository = "https://github.com/ikornaselur/multex"
license = "MIT"
readme = "README.md"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
console = "0.15.0"
indicatif = "0.16.2"
